<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="Logo"
        app:layout_constraintBottom_toTopOf="@+id/openChineseActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:layout_conversion_absoluteHeight="171dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/openChineseActivity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/purple_200"
        android:onClick="switchActivities_onClick"
        android:scaleType="center"
        android:text="@string/title_activity_chinese"
        app:layout_constraintBottom_toTopOf="@+id/openIndianActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        tools:layout_conversion_absoluteHeight="96dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/openIndianActivity"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/purple_200"
        android:onClick="switchActivities_onClick"
        android:scaleType="fitCenter"
        android:text="@string/title_activity_indian"
        app:layout_constraintBottom_toTopOf="@+id/openGreekActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openChineseActivity"
        tools:layout_conversion_absoluteHeight="96dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/openGreekActivity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/purple_200"
        android:onClick="switchActivities_onClick"
        android:scaleType="fitCenter"
        android:text="@string/title_activity_greek"
        app:layout_constraintBottom_toTopOf="@+id/openItalianActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openIndianActivity"
        tools:layout_conversion_absoluteHeight="96dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/openItalianActivity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/purple_200"
        android:onClick="switchActivities_onClick"
        android:scaleType="fitCenter"
        android:text="@string/title_activity_italian"
        app:layout_constraintBottom_toTopOf="@+id/openMexicanActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openGreekActivity"
        tools:layout_conversion_absoluteHeight="96dp"
        tools:layout_conversion_absoluteWidth="88dp" />

    <Button
        android:id="@+id/openMexicanActivity"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="48dp"
        android:background="@color/purple_200"
        android:onClick="switchActivities_onClick"
        android:scaleType="fitCenter"
        android:text="@string/title_activity_mexican"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openItalianActivity"
        tools:layout_conversion_absoluteHeight="96dp"
        tools:layout_conversion_absoluteWidth="88dp" />

</androidx.constraintlayout.widget.ConstraintLayout>